@@ -1,6 +1,7 @@
 1.3
 + Refactor wmi_object/class/instance code
 + _light connection for performance
++ Pick up current WMI default values (not hardcoded)
 
 1.4
 + Events
@@ -8,3 +9,4 @@
 
 2.0
 + Baseline Python 2.4+
++ Get rid of Win32_ special casing
