@@ -21,6 +21,10 @@ http://timgolden.me.uk/python/wmi.html
 What's Changed?
 ===============
 
+11th Apr 2007 1.3.1  . Added positional params for methods
+                     . Intrinsic event watchers default to "modification"
+                     . New _wmi_event object returned from event watchers
+                     . A directly-instantiated class determines its own namespace
 8th Feb 2007  1.3    . Added support for extrinsic events
 28th Dec 2006 1.2.1  . Corrected problem with Event watcher reported by Charlie Taylor
                      . First steps towards pythondoc-style docstrings
